# pybreathe

./: LICENSE  README.md  environment.yml  example.ipynb  example_airflow.txt  example_calibrated_airflow.txt  pyproject.toml  requirements.txt  validation.ipynb
.github/workflows/: draft-pdf.yml
examples/: example.ipynb  example_movements.ipynb  validation.ipynb
paper/: paper.bib  paper.md
pybreathe/: __init__.py  argcontroller.py  breathingflow.py  featureextraction.py  signalfeatures.py  utils.py  visualization.py
pybreathe/base/: __init__.py  breathingflow.py  breathingmovement.py  breathingsignals.py  coherence.py  featureextraction.py  instantiationmethods.py  utils.py  visualization.py
pybreathe/datasets/: breathing_like_signal_01.txt  breathing_like_signal_02.txt  readme.txt  sinus.txt
tests/: test_sinus.py
